Updates to workflow and code
Updates to FRP analysis, added GEE capability to python environment, started Sentinel GEE code

--- a/Aim2/code/Python/frp-wrangle.ipynb
+++ b/Aim2/code/Python/frp-wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "4d797da2-4f14-4307-bafa-ef51add6105c",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,7 @@
     "import rasterio as rio\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "from rasterstats import zonal_stats\n",
     "\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9f86efef-a859-4ff6-abfb-a2758c4c02e9",
    "metadata": {},
    "outputs": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cdcf556b-a298-4834-b203-86cedad952f7",
    "metadata": {},
    "outputs": [
@@ -134,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total elapsed time: 95 seconds.\n"
+      "Total elapsed time: 82 seconds.\n"
      ]
     }
    ],
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "451c528f-44f1-4771-b3b6-8dcc75ade418",
    "metadata": {},
    "outputs": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5bdd67f2-4d3b-4d53-a400-e147d16ce591",
    "metadata": {},
    "outputs": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b983c164-e6cd-4a07-8f47-01cc801e5aa1",
    "metadata": {},
    "outputs": [
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d457a4ca-8f8b-45ec-ad43-a4b13fec6e17",
    "metadata": {},
    "outputs": [
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "12fc99ea-1324-48c7-b6ae-86d08ab0efb5",
    "metadata": {},
    "outputs": [
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bf72cb6e-5d33-4718-b74e-a464714e70dc",
    "metadata": {},
    "outputs": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7724fc10-3542-450b-af07-484ecc16f906",
    "metadata": {},
    "outputs": [
@@ -410,12 +411,16 @@
     "fired_aspen = pd.merge(fired, aspen_fires, on='fired_id', how='inner')\n",
     "print(len(fired_aspen['fired_id'].unique()))\n",
     "\n",
-    "print(fired_aspen.columns)"
+    "print(fired_aspen.columns)\n",
+    "\n",
+    "# Save this file out\n",
+    "fired_aspen = fired_aspen.to_crs(proj)  # ensure the correct projection before exporting\n",
+    "fired_aspen.to_file(os.path.join(maindir,'aspen-fire/Aim2/data/spatial/mod/FIRED/fired_events_west_aspen_all_gt5pct.gpkg'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "99305123-b1c3-4a01-8430-f5e6c0fce738",
    "metadata": {},
    "outputs": [
@@ -465,7 +470,7 @@
     "# Save the map as a PNG\n",
     "plt.savefig(os.path.join(maindir,'aspen-fire/Aim2/figures/Fig1_all_aspen_fires.png'), dpi=300, bbox_inches='tight')\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -500,7 +505,11 @@
     "daily = gpd.read_file(os.path.join(maindir,'FIRED/data/spatial/raw/events/events_040324/shapefiles/fired_conus_ak_2000_to_2024_daily.gpkg'))\n",
     "daily['id'] = daily['id'].astype(str)\n",
     "daily = daily[daily['id'].isin(ids)]\n",
-    "print(len(daily['id'].unique()))"
+    "print(len(daily['id'].unique()))\n",
+    "\n",
+    "# Save out\n",
+    "daily = daily.to_crs(proj)  # ensure the correct projection before exporting\n",
+    "daily.to_file(os.path.join(maindir,'aspen-fire/Aim2/data/spatial/mod/FIRED/fired_daily_west_aspen_all_gt5pct.gpkg'))"
    ]
   },
   {
