Updates to summary attributes

--- a/Aim2/code/Python/lf-evt_frp.ipynb
+++ b/Aim2/code/Python/lf-evt_frp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "48e58a29-e130-4e7e-a1e2-0d7ba2a528ea",
    "metadata": {},
    "outputs": [
@@ -45,18 +45,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c907629c-2e72-4699-b904-dc4ea30c242b",
+   "id": "0117f1fc-d180-4882-a37f-f1e6d0594f22",
    "metadata": {},
    "source": [
-    "## Calculate the EVT composition from LANDFIRE (ca. 2016) within VIIRS plots\n",
-    "\n",
-    "As an initial assessment, we can calculate the forest composition from LANDFIRE and look at the distribution of aspen + FRP. "
+    "## Load VIIRS obs. with LANDFIRE CBD, CBH, and canopy cover (CC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b233df18-52e2-4fc6-b2f9-3f9a4a88bdb9",
+   "execution_count": 21,
+   "id": "cf596133-a066-488d-a076-aac7f97a2852",
    "metadata": {},
    "outputs": [
     {
@@ -70,40 +68,53 @@
       "3  876763  37.512333 -112.681885 2020-11-19     1936          n   7.04   \n",
       "4  876764  37.513638 -112.677109 2020-11-19     1936          n   7.04   \n",
       "\n",
-      "  DAYNIGHT fired_id              ig_date  ... mn_grw_km2  mu_grw_km2  \\\n",
-      "0        D    44927  2020-11-16 00:00:00  ...   0.214659    4.055308   \n",
-      "1        D    44927  2020-11-16 00:00:00  ...   0.214659    4.055308   \n",
-      "2        D    44927  2020-11-16 00:00:00  ...   0.214659    4.055308   \n",
-      "3        D    44927  2020-11-16 00:00:00  ...   0.214659    4.055308   \n",
-      "4        D    44927  2020-11-16 00:00:00  ...   0.214659    4.055308   \n",
+      "  DAYNIGHT fired_id              ig_date  ...      ig_utm_x      ig_utm_y  \\\n",
+      "0        D    44927  2020-11-16 00:00:00  ...  4.167730e+06 -9.943850e+06   \n",
+      "1        D    44927  2020-11-16 00:00:00  ...  4.167730e+06 -9.943850e+06   \n",
+      "2        D    44927  2020-11-16 00:00:00  ...  4.167730e+06 -9.943850e+06   \n",
+      "3        D    44927  2020-11-16 00:00:00  ...  4.167730e+06 -9.943850e+06   \n",
+      "4        D    44927  2020-11-16 00:00:00  ...  4.167730e+06 -9.943850e+06   \n",
       "\n",
-      "            mx_grw_dte      ig_utm_x      ig_utm_y     tot_perim  pct_aspen  \\\n",
-      "0  2020-11-17 00:00:00  4.167730e+06 -9.943850e+06  60253.252598   8.981698   \n",
-      "1  2020-11-17 00:00:00  4.167730e+06 -9.943850e+06  60253.252598   8.981698   \n",
-      "2  2020-11-17 00:00:00  4.167730e+06 -9.943850e+06  60253.252598   8.981698   \n",
-      "3  2020-11-17 00:00:00  4.167730e+06 -9.943850e+06  60253.252598   8.981698   \n",
-      "4  2020-11-17 00:00:00  4.167730e+06 -9.943850e+06  60253.252598   8.981698   \n",
+      "      tot_perim pct_aspen  ACQ_MONTH  ACQ_YEAR  CBD_mean  CBH_mean  CC_mean  \\\n",
+      "0  60253.252598  8.981698         11      2020    3.1808    8.9424   18.680   \n",
+      "1  60253.252598  8.981698         11      2020    5.1168    9.8512   27.384   \n",
+      "2  60253.252598  8.981698         11      2020    5.6992    8.7392   31.528   \n",
+      "3  60253.252598  8.981698         11      2020    5.0400    3.7440   23.864   \n",
+      "4  60253.252598  8.981698         11      2020    3.4704    3.8160   17.560   \n",
       "\n",
-      "   ACQ_MONTH  ACQ_YEAR                                           geometry  \n",
-      "0         11      2020  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
-      "1         11      2020  POLYGON ((-1452281.003 1735259.817, -1452281.0...  \n",
-      "2         11      2020  POLYGON ((-1451795.311 1735312.697, -1451795.3...  \n",
-      "3         11      2020  POLYGON ((-1452741.949 1736410.081, -1452741.9...  \n",
-      "4         11      2020  POLYGON ((-1452304.669 1736481.068, -1452304.6...  \n",
+      "                                            geometry  \n",
+      "0  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
+      "1  POLYGON ((-1452281.003 1735259.817, -1452281.0...  \n",
+      "2  POLYGON ((-1451795.311 1735312.697, -1451795.3...  \n",
+      "3  POLYGON ((-1452741.949 1736410.081, -1452741.9...  \n",
+      "4  POLYGON ((-1452304.669 1736481.068, -1452304.6...  \n",
       "\n",
-      "[5 rows x 28 columns]\n"
+      "[5 rows x 31 columns]\n"
      ]
     }
    ],
    "source": [
-    "# Load the VIIRS 375m2 \"plot\"\n",
-    "frp_plots = gpd.read_file(os.path.join(maindir,'aspen-fire/Aim2/data/spatial/mod/VIIRS/viirs_plots_fired_events_west_aspen.gpkg'))\n",
-    "print(frp_plots.head())"
+    "# Load the LANDFIRE summaries\n",
+    "frp_plots = os.path.join(maindir,'aspen-fire/Aim2/data/spatial/mod/VIIRS/viirs_plots_fired_events_west_aspen_LF.gpkg')\n",
+    "frp_plots = gpd.read_file(frp_plots)\n",
+    "print(lf.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c907629c-2e72-4699-b904-dc4ea30c242b",
+   "metadata": {},
+   "source": [
+    "## Calculate the EVT composition from LANDFIRE (ca. 2016) within VIIRS plots\n",
+    "\n",
+    "As an initial assessment, we can calculate the forest composition from LANDFIRE and look at the distribution of aspen + FRP. \n",
+    "\n",
+    "First, plot the distribution of FRP values for day vs. night observations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "3a5d7a5e-9c6c-4612-8523-1ce4a92bad65",
    "metadata": {},
    "outputs": [
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "3ab39741-c980-4098-bb82-475f83992da1",
    "metadata": {},
    "outputs": [
@@ -159,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total elapsed time: 403 seconds.\n"
+      "Total elapsed time: 494 seconds.\n"
      ]
     }
    ],
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "0eeb6e82-bbba-459f-b44f-8109216c3293",
    "metadata": {},
    "outputs": [
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "b9182bda-b903-4768-945b-9d42559c841c",
    "metadata": {},
    "outputs": [
@@ -280,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "a286ca94-ce79-437e-8835-1b0b2b9b7f57",
    "metadata": {},
    "outputs": [
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "4a46a52f-fbcf-4691-8218-a5236969fa8a",
    "metadata": {},
    "outputs": [
@@ -348,8 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3a4e2a14-66c3-4319-b637-79f536317c05",
+   "execution_count": 28,
+   "id": "0cd65b2d-30e7-4915-af10-09b5865e8195",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +372,7 @@
       "       'ig_year', 'last_date', 'event_dur', 'tot_ar_km2', 'fsr_km2_dy',\n",
       "       'mx_grw_km2', 'mn_grw_km2', 'mu_grw_km2', 'mx_grw_dte', 'ig_utm_x',\n",
       "       'ig_utm_y', 'tot_perim', 'pct_aspen', 'ACQ_MONTH', 'ACQ_YEAR',\n",
-      "       'geometry'],\n",
+      "       'CBD_mean', 'CBH_mean', 'CC_mean', 'geometry'],\n",
       "      dtype='object')\n",
       "      VID   EVT  pixel_count  total_pixels  pct_cover  VALUE  \\\n",
       "0  876446  7011           32           625       5.12   7011   \n",
@@ -377,19 +388,28 @@
       "3  Southern Rocky Mountain Dry-Mesic Montane Mixe...   Conifer   \n",
       "4  Southern Rocky Mountain Mesic Montane Mixed Co...   Conifer   \n",
       "\n",
-      "                                            EVT_GP_N           EVT_CLASS  \\\n",
-      "0               Aspen Forest, Woodland, and Parkland    Open tree canopy   \n",
-      "1                            Pinyon-Juniper Woodland    Open tree canopy   \n",
-      "2                               Limber Pine Woodland    Open tree canopy   \n",
-      "3  Douglas-fir-Ponderosa Pine-Lodgepole Pine Fore...  Closed tree canopy   \n",
-      "4  Douglas-fir-Grand Fir-White Fir Forest and Woo...  Closed tree canopy   \n",
+      "                                            EVT_GP_N           EVT_CLASS  ...  \\\n",
+      "0               Aspen Forest, Woodland, and Parkland    Open tree canopy  ...   \n",
+      "1                            Pinyon-Juniper Woodland    Open tree canopy  ...   \n",
+      "2                               Limber Pine Woodland    Open tree canopy  ...   \n",
+      "3  Douglas-fir-Ponderosa Pine-Lodgepole Pine Fore...  Closed tree canopy  ...   \n",
+      "4  Douglas-fir-Grand Fir-White Fir Forest and Woo...  Closed tree canopy  ...   \n",
       "\n",
-      "    ACQ_DATE ACQ_TIME  ACQ_MONTH  ACQ_YEAR CONFIDENCE    FRP DAYNIGHT fired_id  \n",
-      "0 2020-11-18     1954         11      2020          n  24.28        D    44927  \n",
-      "1 2020-11-18     1954         11      2020          n  24.28        D    44927  \n",
-      "2 2020-11-18     1954         11      2020          n  24.28        D    44927  \n",
-      "3 2020-11-18     1954         11      2020          n  24.28        D    44927  \n",
-      "4 2020-11-18     1954         11      2020          n  24.28        D    44927  \n",
+      "  ACQ_YEAR CONFIDENCE    FRP  DAYNIGHT fired_id              ig_date CBD_mean  \\\n",
+      "0     2020          n  24.28         D    44927  2020-11-16 00:00:00   3.1808   \n",
+      "1     2020          n  24.28         D    44927  2020-11-16 00:00:00   3.1808   \n",
+      "2     2020          n  24.28         D    44927  2020-11-16 00:00:00   3.1808   \n",
+      "3     2020          n  24.28         D    44927  2020-11-16 00:00:00   3.1808   \n",
+      "4     2020          n  24.28         D    44927  2020-11-16 00:00:00   3.1808   \n",
+      "\n",
+      "  CBH_mean CC_mean                                           geometry  \n",
+      "0   8.9424   18.68  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
+      "1   8.9424   18.68  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
+      "2   8.9424   18.68  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
+      "3   8.9424   18.68  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
+      "4   8.9424   18.68  POLYGON ((-1452319.902 1735767.739, -1452319.9...  \n",
+      "\n",
+      "[5 rows x 23 columns]\n",
       "65124\n"
      ]
     }
@@ -399,7 +419,8 @@
     "print(frp_plots.columns)\n",
     "\n",
     "# Subset to columns we want to keep\n",
-    "frp_plots = frp_plots[['VID','ACQ_DATE','ACQ_TIME','ACQ_MONTH','ACQ_YEAR','CONFIDENCE','FRP','DAYNIGHT','fired_id']]\n",
+    "frp_plots = frp_plots[['VID','ACQ_DATE','ACQ_TIME','ACQ_MONTH','ACQ_YEAR','CONFIDENCE','FRP','DAYNIGHT',\n",
+    "                       'fired_id', 'ig_date', 'CBD_mean', 'CBH_mean', 'CC_mean', 'geometry']]\n",
     "\n",
     "# Join back to the dataframe with EVT summary\n",
     "frp_plots_evt = props_df.merge(frp_plots, left_on='VID', right_on='VID', how='left')\n",
