Updates to code and folder structure

--- a/Aim2/code/Python/lf-cbd_cbh_cc.ipynb
+++ b/Aim2/code/Python/lf-cbd_cbh_cc.ipynb
@@ -16,9 +16,10 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Extract attributes for FRP observations\n",
+    "Extract LANDFIRE attributes for FRP observations\n",
     "\n",
     "Data sources:\n",
+    "- LANDFIRE Existing Vegetation Type (EVT)\n",
     "- LANDFIRE Canopy Bulk Density (CBD)\n",
     "- LANDFIRE Canopy Base Height (CBH)\n",
     "- LANDFIRE Tree Canopy Cover (TCC)\n",
