--- a/Aim2/code/Python/viirs_swath2grid-MaxFRP.ipynb
+++ b/Aim2/code/Python/viirs_swath2grid-MaxFRP.ipynb
@@ -2,13 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "652e9667-ea08-4b6a-97d0-dec73a5242b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success !\n"
+     ]
+    }
+   ],
    "source": [
     "# Import packages\n",
-    "import os, shutil, time, glob, warnings\n",
+    "import os, shutil, time, glob, warnings, math\n",
     "import earthaccess\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -46,10 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b3a3566-b1cd-4ca3-8c29-4c157fbcd4f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function to process VIIRS NetCDF files is ready to use!\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to convert swath to grid\n",
     "\n",
@@ -141,8 +157,8 @@
     "    # Get the middle swatch latlon\n",
     "    midLat, midLon = np.mean(lat), np.mean(lon) \n",
     "\n",
-    "    # Identify the UTM Zone of the middle swath\n",
-    "    utm_zome = utmLookup(midLat, midLon)\n",
+    "    # Identify the UTM Zone of the middle swath (NOT IMPLEMENTED YET)\n",
+    "    utm_zone = utmLookup(midLat, midLon)\n",
     "    print(f\"UTM Zone of middle swath: {utm_zone}\")\n",
     "    \n",
     "    ############################\n",
@@ -270,10 +286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "54bce8bb-50a9-4d94-929a-a32dbd80fd77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VJ103MODLL/VJ103MODLL.A2021243.1000.021.2021243163653.h5\n",
+      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP14IMG/VNP14IMG.A2021242.2048.002.2024074102039.nc\n",
+      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VJ114IMG/VJ114IMG.A2021239.0936.002.2024081210828.nc\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing for one fire\n",
     "testDir = os.path.join(datadir,'FIRED_3518')\n",
@@ -297,10 +323,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e7c8b8e6-6cdf-486e-ae63-6cdb78b2b725",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['fired_id', 'ig_date', 'ig_day', 'ig_month', 'ig_year', 'last_date',\n",
+      "       'event_dur', 'tot_pix', 'tot_ar_km2', 'fsr_px_dy', 'fsr_km2_dy',\n",
+      "       'mx_grw_px', 'mn_grw_px', 'mu_grw_px', 'mx_grw_km2', 'mn_grw_km2',\n",
+      "       'mu_grw_km2', 'mx_grw_dte', 'x', 'y', 'ig_utm_x', 'ig_utm_y', 'lc_code',\n",
+      "       'lc_mode', 'lc_name', 'lc_desc', 'lc_type', 'eco_mode', 'eco_name',\n",
+      "       'eco_type', 'tot_perim', 'pct_aspen', 'geometry'],\n",
+      "      dtype='object')\n",
+      "102\n"
+     ]
+    }
+   ],
    "source": [
     "# Load fire data and create a dictionary with bounding coordinates\n",
     "fires_path = os.path.join(maindir,'Aim2/data/spatial/mod/FIRED/fired_events_west_aspen.gpkg')\n",
@@ -311,10 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "215e769d-bd0a-4fdf-b209-256add7d6618",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIRED_ID: 3518, \n",
+      "Bounding Coordinates: \n",
+      "[(-113.4870457742665, 37.31747928447832), (-113.45119936806327, 37.31747928447832), (-113.45119936806327, 37.336690972515356), (-113.4870457742665, 37.336690972515356), (-113.4870457742665, 37.31747928447832)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a dictionary to store fire bounding coordinates\n",
     "coords_dict = {}\n",
@@ -333,10 +384,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "db720c6c-ed34-4b2e-8076-e3914d3eadcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing NetCDF files for VNP14IMG\n",
+      "There are 34 associated geolocation files ...\n",
+      "VNP14IMG.A2021242.2048.002.2024074102039\n",
+      "['/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP03MODLL/VNP03MODLL.A2021242.2048.002.2024017150503.h5']\n",
+      "latGEO shape: (3232, 3200)\n",
+      "lonGEO shape: (3232, 3200)\n",
+      "Data Type: <class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'utm_zone' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 43\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(geo)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m###################################\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Now apply our processing function\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m \u001b[43mviirs_swath2grid\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfireDA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgeoDA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgeo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mshortName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshort_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43msdsName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mecoSDS\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mecoSDS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgeomCoords\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcoords_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43mout_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout_dir\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# # Update the maximum FRP array\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# if daynight == \"Day\":\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m#     # Update the maximum FRP grid\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;66;03m#     else:\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;66;03m#         max_frp_night = np.maximum(max_frp_night, maxFRP)\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime to complete granule:\u001b[39m\u001b[38;5;124m'\u001b[39m, time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m t0)\n",
+      "Cell \u001b[0;32mIn[2], line 93\u001b[0m, in \u001b[0;36mviirs_swath2grid\u001b[0;34m(fireDA, geoDA, shortName, sdsName, ecoSDS, geomCoords, out_dir)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;66;03m# Identify the UTM Zone of the middle swath\u001b[39;00m\n\u001b[1;32m     92\u001b[0m utm_zome \u001b[38;5;241m=\u001b[39m utmLookup(midLat, midLon)\n\u001b[0;32m---> 93\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUTM Zone of middle swath: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mutm_zone\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     95\u001b[0m \u001b[38;5;66;03m############################\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;66;03m# Load data from NetCDF file\u001b[39;00m\n\u001b[1;32m     97\u001b[0m ds \u001b[38;5;241m=\u001b[39m Dataset(fireDA, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'utm_zone' is not defined"
+     ]
+    }
+   ],
    "source": [
     "t0 = time.time()\n",
     "\n",
